--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="mathquiz">
                 <h1>MathQuiz</h1>
     
-                <button><a href="#"><img src="./images/birinci.png" alt="teacher">Dashboard</a></button>
+                <button><a href="https://dashboard-six-mauve.vercel.app/"><img src="./images/birinci.png" alt="teacher">Dashboard</a></button>
                 <button><a href="https://projects-program-page.vercel.app/"><img src="./images/teacher.svg" alt="teacher">İmtahanlar</a></button>
                 <button><a href="https://online-videos-pi.vercel.app/"><img src="./images/video-play.svg" alt="video-play">Onlayn Videolar</a></button>
                 <button><a href="https://scoreboardpage.vercel.app/"><img src="./images/chart.svg" alt="chart">ScoreBoard</a></button>
